# bluetooth-rn4020-driver

./: CMakeLists.txt  Util.cpp  Util.h  main.cpp
Bluetooth/: BluetoothLEDevice.h  BluetoothLEPeripheral.h  IBluetooth.cpp  IBluetooth.h  MACAddress.cpp  MACAddress.h  RN4020.cpp  RN4020.h  RN4020Device.cpp  RN4020Device.h  Services.h  UUID.cpp  UUID.h
Bluetooth/Drivers/: RN4020Driver.cpp  RN4020Driver.h
Bluetooth/Models/: BluetoothLEPeripheral.h  ClientCharacteristic.h  ServerCharacteristic.h  UUID.cpp  UUID.h
Drivers/: RN4020Device.h  RN4020Driver.cpp  RN4020Driver.h
Models/: CharacteristicProperty.h  ClientCharacteristic.h  UUID.cpp
Serial/: DelimiterSerial.h  ISerial.h  IUartDriver.h
Serial/UART/: IUartDriver.h
Serial/UART/Windows/: WindowsSerialPort.cpp  WindowsSerialPort.h
Serial/Windows/: WindowsSerialPort.h
Util/: CircularBuffer.h
Windows/: WindowsSerialPort.cpp  WindowsSerialPort.h
ble-driver/: CMakeLists.txt
ble-driver/Models/: ClientCharacteristicConfiguration.h
ble-driver/Serial/: DelimiterSerial.h
ble-driver/src/: BluetoothLEDevice.cpp
ble-driver/src/Drivers/: RN4020Device.cpp  RN4020Driver.cpp  RN4020Driver.h
ble-driver/src/Models/: MACAddress.h  UUID.h
demo/win/advertise/: CMakeLists.txt  main.cpp
demo/win/central/: CMakeLists.txt  main.cpp
demo/win/central-browser/: CMakeLists.txt  main.cpp
demo/win/central-browser/Menu/: BluetoothMenu.h  BrowseServerServicesMenu.cpp  BrowseServerServicesMenu.h  ComPortMenu.cpp  ComPortMenu.h  MainMenu.cpp  MainMenu.h
demo/win/console-lib/: CMakeLists.txt  ConsoleMenu.cpp  ConsoleMenu.h  example.cpp
demo/win/serial-lib/: CMakeLists.txt
demo/win/serial-lib/src/: WindowsSerialPort.h
lib/Models/: UUID.cpp
